# AIRFLOW-TEST

./: db_tasks.py  glue_etl_script.py  postgres_connect.py  postgres_to_glue_to_s3_airflow.py  pyproject.toml  s3_tasks.py  users_data.csv
sample-data/: nasdaq.csv  run-1765291046727-part-r-00019
